provider/kubernetes/ingress/fixtures/Double-Single-Service-Ingress_endpoint.yml
kind: Endpoints
apiversion: v1
metadata:
  name: service1
  namespace: testing

subsets:
  - addresses:
      - ip: 10.30.0.1
    ports:
      - port: 8080
  - addresses:
      - ip: 10.41.0.1
    ports:
      - port: 8080

---
kind: Endpoints
apiversion: v1
metadata:
  name: service2
  namespace: testing

subsets:
  - addresses:
      - ip: 10.10.0.1
    ports:
      - port: 8080
  - addresses:
      - ip: 10.21.0.1
    ports:
      - port: 8080
