provider/kubernetes/ingress/fixtures/Double-Single-Service-Ingress_service.yml
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
    - port: 80
  clusterIp: 10.0.0.1

---
kind: Service
apiVersion: v1
metadata:
  name: service2
  namespace: testing

spec:
  ports:
    - port: 80
  clusterIp: 10.0.0.1
