provider/kubernetes/ingress/fixtures/Ingress-one-rule-with-two-paths_endpoint.yml
kind: Endpoints
apiVersion: v1
metadata:
  name: service1
  namespace: testing

subsets:
- addresses:
  - ip: 10.10.0.1
  ports:
  - port: 8080
- addresses:
  - ip: 10.21.0.1
  ports:
  - port: 8080
