provider/kubernetes/ingress/fixtures/Ingress-with-a-basic-rule-on-one-path-with-https-(port-==-443)_service.yml
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
  - port: 443
  clusterIp: 10.0.0.1
