provider/kubernetes/ingress/fixtures/Ingress-with-a-basic-rule-on-one-path-with-https-(portname-==-https)_endpoint.yml
kind: Endpoints
apiVersion: v1
metadata:
  name: service1
  namespace: testing

subsets:
- addresses:
  - ip: 10.10.0.1
  ports:
  - name: https
    port: 8443
- addresses:
  - ip: 10.21.0.1
  ports:
  - name: https
    port: 8443
