provider/kubernetes/ingress/fixtures/Ingress-with-a-basic-rule-on-one-path-with-https-(portname-starts-with-https)_ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - http:
      paths:
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 8443
