provider/kubernetes/ingress/fixtures/Ingress-with-a-basic-rule-on-one-path-with-https-(portname-starts-with-https)_service.yml
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
  - name: https-foo
    protocol: ""
    port: 8443
  clusterIp: 10.0.0.1
