provider/kubernetes/ingress/fixtures/Ingress-with-a-basic-rule-on-one-path_service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
  - port: 80
  clusterIp: 10.0.0.1
