provider/kubernetes/ingress/fixtures/Ingress-with-ingressClass-without-annotation_ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ""
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
  - http:
      paths:
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 80
