provider/kubernetes/ingress/fixtures/Ingress-with-one-host-without-path_ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: example-com
          servicePort: 80
