provider/kubernetes/ingress/fixtures/Ingress-with-one-service-without-endpoints-subset_endpoint.yml
kind: Endpoints
apiVersion: v1
metadata:
    name: service1
    namespace: testing
