provider/kubernetes/ingress/fixtures/Ingress-with-only-a-bad-path-syntax_ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
    - http:
        paths:
          - path: /bar-"0"
            backend:
              serviceName: service1
              servicePort: 80
