provider/kubernetes/ingress/fixtures/Ingress-with-service-with-externalName_service.yml
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
  - port: 8080
  clusterIp: 10.0.0.1
  type: ExternalName
  externalName: traefik.wtf
