provider/kubernetes/ingress/fixtures/Ingress-with-with-port-name-in-backend-and-2-pod-replica_service.yml
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
  - name: carotte
    port: 8082
  - name: tchouk
    port: 80
  clusterIp: 10.0.0.1
